Fixed text overflow

--- a/public/stylesheets/programs.css
+++ b/public/stylesheets/programs.css
@@ -164,17 +164,18 @@
 }
 
 .commentComment{
-    display:flex;
     background-color: lightgray;
     color: black;
     padding-left: 5px;
     padding-right: 5px;
-    /* height:auto; */
+    height:auto;
     flex-wrap: wrap;
     /* height: inherit; */
     /* border-bottom: gray solid 1px; */
     grid-area: "Comment";
+    word-wrap: break-word;
     /* overflow: hidden; */
+    text-align:start;
 }
 
 .commentThumbnail{
@@ -192,10 +193,11 @@
 .commentInfo{
     border-radius: 1px 5px 5px;
     background-color: lightgray;
-    /* height: auto; */
+    height: auto;
     width: 430px;
     /* margin-top: 30px; */
     margin-left: 10px;
     color: black;
     box-shadow: 0 0 5px gray;
+    word-wrap: break-word;
 }
